--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,38 @@
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta property="title" content="DS Code"/> 
   <meta name="author" content="Dave Sommerville">
   <meta name="description" content="Dave Sommerville | Fullstack Web Developer Actively seeking full-time opportunities in Winnipeg, Canada - building fast, accessible, and modern websites. Actively seeking full-time opportunities. Focused on creating custom Web applications with best practices, crafting scalable, maintainable, and versatile code.">
+        {/* Open Graph */}
+      <meta property="og:title" content={meta.title} />
+      <meta property="og:description" content={meta.description} />
+      <meta property="og:image" content={meta.image} />
+      <meta property="og:url" content={fullUrl} />
+      <meta property="og:type" content="website" />
+
+      {/* Twitter Card */}
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:title" content={meta.title} />
+      <meta name="twitter:description" content={meta.description} />
+      <meta name="twitter:image" content={meta.image} />
+        <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "Brand",
+            "name": "DS Code",
+            "url": "https://ds-code.ca",
+            "logo": "https://ds-code.ca/public/images/site-preview.png",
+            "description": "A web developer based in Winnipeg, Canada, building fast, accessible, and modern websites. Actively seeking full-time opportunities. Focused on creating custom Web applications with best practices, crafting scalable, maintainable, and versatile code.",
+            "sameAs": [
+              "www.linkedin.com/in/dave-sommerville-2abb50326",
+              "https://github.com/dave-sommerville",
+              "https://www.youtube.com/@davesommerville-ds-code",
+              "https://dave-sommerville.github.io/ds-code-releases/"
+            ]
+          }
+        </script>
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Kode+Mono:wght@400..700&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
