--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
   <meta charset="utf-8" />
   <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
@@ -43,3 +44,8 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Kode+Mono:wght@400..700&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 </head>
+  <body class="container">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
