--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/image/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="author" content="Dave Sommerville" />
   <meta name="description" content="Dave Sommerville | Fullstack Web Developer Actively seeking full-time opportunities in Winnipeg, Canada - building fast, accessible, and modern websites. Focused on creating scalable, maintainable, and versatile code." />
-
   <!-- Open Graph -->
   <meta property="og:title" content="DS Code | Dave Sommerville" />
   <meta property="og:description" content="Dave Sommerville | Fullstack Web Developer Actively seeking full-time opportunities in Winnipeg, Canada - building fast, accessible, and modern websites. Focused on creating scalable, maintainable, and versatile code." />
   <meta property="og:image" content="https://ds-code.ca/image/site-preview.png" />
   <meta property="og:url" content="https://ds-code.ca" />
   <meta property="og:type" content="website" />
-
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="DS Code | Dave Sommerville" />
   <meta name="twitter:description" content="My Online Portfolio celebrating my journey in web development." />
   <meta name="twitter:image" content="https://ds-code.ca/image/site-preview.png" />
-
   <!-- Structured Data -->
   <script type="application/ld+json">
     {
@@ -37,7 +34,6 @@
       ]
     }
   </script>
-
   <!-- Fonts and Icons -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,6 +41,16 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 </head>
   <body class="container">
+    <!-- Netlify form fallback (hidden) -->
+    <form name="poll" netlify netlify-honeypot="bot-field" hidden>
+      <input type="hidden" name="form-name" value="poll" />
+      <input type="hidden" name="bot-field" />
+      
+      <input type="radio" name="feature" value="Cactus Jump" />
+      <input type="radio" name="feature" value="Mine Sweeper" />
+      <input type="radio" name="feature" value="DS Paint" />
+      <input type="radio" name="feature" value="Whack a Hole" />
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
