--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 </head>
   <body class="container">
     <!-- Netlify form fallback (hidden) -->
-    <form name="poll" netlify netlify-honeypot="bot-field" hidden>
+    <form name="poll" data-netlify="true" netlify hidden>
       <input type="hidden" name="form-name" value="poll" />
       <input type="hidden" name="bot-field" />
       
@@ -51,6 +51,15 @@
       <input type="radio" name="feature" value="DS Paint" />
       <input type="radio" name="feature" value="Whack a Hole" />
     </form>
+    <!-- Netlify hidden fallback form for "contact" -->
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="hidden" name="form-name" value="contact" />
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+      <input type="text" name="bot-field" />
+    </form>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
