--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="author" content="Dave Sommerville" />
   <meta name="description" content="Dave Sommerville | Fullstack Web Developer Actively seeking full-time opportunities in Winnipeg, Canada - building fast, accessible, and modern websites. Focused on creating scalable, maintainable, and versatile code." />
+  <meta name="msvalidate.01" content="603CEA2226BD19E0768809CC6DD364FD" />
   <!-- Open Graph -->
   <meta property="og:title" content="DS Code | Dave Sommerville" />
   <meta property="og:description" content="Dave Sommerville | Fullstack Web Developer Actively seeking full-time opportunities in Winnipeg, Canada - building fast, accessible, and modern websites. Focused on creating scalable, maintainable, and versatile code." />
