Added preload to app.js

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       <textarea name="message"></textarea>
       <input type="text" name="bot-field" />
     </form>
-
+    <img src="https://dave-sommerville.github.io/ds-code-releases/img/profile.JPG" hidden>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
